# Soft-Arm

./: .gitmodules  CMakeLists.txt  README.md  Tabla170.csv  main_redes.cpp  main_redes.h
.build-untitled-Desktop-Default/: CMakeCache.txt  Makefile  Soft-Arm.cbp  arm1  cmake_install.cmake  main  main2  move-motor  start_motor  stop_motor  test_sensor  test_sensor_new
.build-untitled-Desktop-Default/kinematics/: Makefile  cmake_install.cmake
Tables/: PID_scheduling.csv  PI_scheduling.csv  results_javi.csv  test.csv  testIKExact(1).csv  testIKExact.csv  testIKdeep1layer.csv  test_old.csv
graphs/: .~lock.Test3_Control_P0_Y-20.csv#  .~lock.Test_Control_1.csv#  Data_Javi50.csv  MocapTest1.csv  MocapTest20min2.csv  MocapTest_P.csv  Open_P0_Y-10.csv  Open_P0_Y-20.csv  Open_P32_Y0.csv  Open_P35_Y0.csv  PRE_demo360_30.csv  PRE_demo360_45.csv  PRE_demo360_60.csv  PRE_demodegs30.csv  Path_trans_data1.csv  Path_trans_data2.csv  Path_trans_data3.csv  Path_trans_data4.csv  Test2_Control_P0_Y-20.csv  Test2_Control_P0_Y20.csv  Test2_Control_P10_Y10.csv  Test3_Control_P-10_Y-10.csv  Test3_Control_P0_Y-20.csv  Test3_Control_P0_Y-40.csv  Test3_Control_P10_Y-10.csv  Test3_Control_P10_Y10.csv  Test3_Control_P10_Y20.csv  Test3_Control_P20_Y10.csv  Test3_Control_P20_Y20.csv  Test3_Control_P30_Y30.csv  Test4_Control_P0_Y20.csv  Test4_Control_P20_Y0.csv  Test4_Control_P40_Y0.csv  Test5_Control_I0_Y20.csv  Test5_Control_P0_Y20.csv  Test5_Control_P20_Y0.csv  Test5_Control_P25_Y0.csv  Test6_Control_10_Y0.csv  Test6_Control_20_Y0.csv  TestPID_Control_-20_Y0.csv  (+38 more)
graphs/Control/: Test_adap.csv
graphs/Identificacion/: Demo.csv  IndentificacionRand.csv  IndentificacionV2_P-10_Y-10.csv  IndentificacionV2_P-10_Y-20.csv  IndentificacionV2_P-10_Y-30.csv  IndentificacionV2_P-10_Y-40.csv  (+333 more)
kinematics/: Kinematics.cpp  Kinematics.h
main/: imc_controller.cpp  imc_controller_full_loop.cpp  main.cpp  main2.cpp  main3.cpp  main_controller.cpp  main_controller_foc.cpp  main_controller_pid.cpp  main_controller_robpid.cpp  main_controller_scheduling.cpp  main_demo.cpp  main_desac.cpp  main_identificador.cpp  main_motor_position.cpp  main_razor.cpp  main_redes.cpp  main_redes_inv.cpp  main_sensor.cpp  main_trans_data.cpp  main_trayectorias.cpp  main_velocity.cpp  tfg_identificacion_w.cpp
main_vel/: main_vel_controller.cpp  main_vel_focontroller.cpp  main_vel_identification.cpp  vel_trayectoria.cpp
script/: pushall
tools/: arm1.cpp  move-motor.cpp  start_motor.cpp  stop_motor.cpp  test-identificacion.cpp  test_sensor.cpp  test_sensor_new.cpp  test_sensor_razor.cpp  test_tf.cpp
(+1835 files in other folders)
